# xfce4-mixer

./: .gitignore  ABOUT-NLS  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  ltmain.sh  meson.build  meson_options.txt  mfclean  xfce4-mixer.spec.in
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
include/: Makefile.am  Makefile.in  mixer-mcs-names.h  vc.h  vcs.h
lib/: Makefile.am  Makefile.in  libxfce4mixer-1.0.pc.in  stringlist.inc  test_vc.c  trans.c  vc.c  vc.h  vc_alsa.c  vc_alsa_fallback.c  vc_oss.c  vc_sgi.c  vc_sun.c  vcs.c
libxfce4mixer/: Makefile.am  gst-mixer-options.c  gst-mixer-options.h  gst-mixer-track.c  gst-mixer-track.h  gst-mixer.c  gst-mixer.h  libxfce4mixer.c  libxfce4mixer.h  meson.build  xfce-mixer-card-combo.c  xfce-mixer-card-combo.h  xfce-mixer-card.c  xfce-mixer-card.h  xfce-mixer-debug.c  xfce-mixer-debug.h  xfce-mixer-preferences.c  xfce-mixer-preferences.h  xfce-mixer-stock.c  xfce-mixer-stock.h  xfce-mixer-track-combo.c  xfce-mixer-track-combo.h  xfce-mixer-track-type.c  xfce-mixer-track-type.h  xfce-mixer-utilities.c  xfce-mixer-utilities.h
libxfce4mixer/alsa/: alsa-mixer.c  alsa-mixer.h  alsa-options.c  alsa-options.h  alsa-track.c  alsa-track.h
libxfce4mixer/oss/: oss-mixer.c  oss-mixer.h  oss-options.c  oss-options.h  oss-track.c  oss-track.h
libxfce4mixer/pulse/: pulse-mixer.c  pulse-mixer.h  pulse-options.c  pulse-options.h  pulse-track.c  pulse-track.h
libxfce4mixer/sndio/: sndio-mixer.c  sndio-mixer.h  sndio-options.c  sndio-options.h  sndio-track.c  sndio-track.h
panel-plugin/: Makefile.am  Makefile.in  gobs  helpers.inc  launcher-entry.c  launcher-entry.h  main.c  meson.build  mixer-control.gob  mixer-prefbox.gob  mixer-preferences.gob  mixer-pxml.gob  mixer-slider-tiny.gob  mixer.c  mixer.desktop.in  mixer_window.c  mixer_window.h  mvisible_opts.c  mvisible_opts.h  name_change  plugin.c  scroller_size.c  scroller_size.h  string_option_menu.c  string_option_menu.h  stringlist.inc  test_vc.c  vc.c  vc.h  vc_alsa.c  vc_alsa_fallback.c  vc_oss.c  xfce-mixer-cache-vc.c  xfce-mixer-cache-vc.h  xfce-mixer-control-vc.c  xfce-mixer-control.c  xfce-mixer-control.h  xfce-mixer-plugin.c  xfce-mixer-plugin.h  xfce-mixer-prefbox-private.h  (+17 more)
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  af.po  am.po  ar.gmo  ar.po  ast.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bn_IN.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.po  el.po  el_GR.gmo  el_GR.po  en_AU.po  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  es_MX.gmo  es_MX.po  et.gmo  et.po  eu.gmo  eu.po  (+88 more)
po/po-new/: de.po
settings/: Makefile.am  Makefile.in  gobs  helpers3.inc  mixer-settingsbox.gob  sound-icon.h  sound.c  string_option_menu.c  string_option_menu.h  vc_sun.c  vcreg.inc  xfce-mixer-settings.desktop  xfce-mixer-settings.desktop.in  xfce-mixer-settingsbox-private.h  xfce-mixer-settingsbox.c  xfce-mixer-settingsbox.h
src/: CONFIG  Makefile.am  Makefile.in  compile  delayer.inc  disclosure-widget.c  helpers.inc  helpers3.inc  helpers_h.inc  launcher-entry.c  main.c  main.h  mcs_client.c  mcs_client.h  menu-callbacks.inc  menus.c  menus.h  mixer-control.gob  mixer-info.gob  mixer-mcs-client.gob  mixer-profilebox-detail.gob  mixer-profilebox.gob  mixer-profiledlg.gob  mixer-profiles.gob  mixer-pxml.gob  mixer-select.gob  mixer-slider-tiny.gob  mixer-slider.gob  mixer-switch.gob  mixer-view-tiny.gob  mixer-view.gob  mixer-window.gob  msgdlg.inc  my-config.c  my-config.h  string_option_menu.c  vc.h  vc_alsa.c  vc_oss.c  xfce-mixer-cache-vc.c  (+53 more)
xfce4-mixer/: Makefile.am  main.c  meson.build  xfce-mixer-application.c  xfce-mixer-application.h  xfce-mixer-card.c  xfce-mixer-card.h  xfce-mixer-container.c  xfce-mixer-container.h  xfce-mixer-controls-dialog.c  xfce-mixer-controls-dialog.h  xfce-mixer-option.c  xfce-mixer-option.h  xfce-mixer-preferences.c  xfce-mixer-preferences.h  xfce-mixer-stock.c  xfce-mixer-stock.h  xfce-mixer-switch.c  xfce-mixer-switch.h  xfce-mixer-track-type.c  xfce-mixer-track-type.h  xfce-mixer-track.c  xfce-mixer-track.h  xfce-mixer-window.c  xfce-mixer-window.h  xfce-mixer.c  xfce-mixer.h  xfce4-mixer.1  xfce4-mixer.desktop.in  xfce4-mixer.desktop.in.in
